--- a/repo/web-admin-feign-dev.yml
+++ b/repo/web-admin-feign-dev.yml
@@ -7,6 +7,8 @@ spring:
     encoding: UTF-8
     servlet:
       content-type: text/html
+  zipkin:
+    base-url: http://localhost:9411
 server:
   port: 8765
 feign:
