--- a/repo/web-admin-feign-dev.yml
+++ b/repo/web-admin-feign-dev.yml
@@ -1,14 +1,12 @@
 spring:
   application:
-    name: hello-spring-cloud-web-admin-feign
+    name: service-feign
   thymeleaf:
     cache: false
     mode: LEGACYHTML5
     encoding: UTF-8
     servlet:
       content-type: text/html
-  zipkin:
-    base-url: http://localhost:9411
 server:
   port: 8765
 feign:
@@ -18,4 +16,3 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
-
