--- a/repo/web-admin-feign-dev.yml
+++ b/repo/web-admin-feign-dev.yml
@@ -18,6 +18,8 @@ spring:
     username: root
     password: root
 management:
+  security：
+    enabled：false
   endpoint:
     web:
       exposure:
